# rust-journey

./: README.md
.github/workflows/: rust-ci.yml
1-hello_cargo/src/: main.rs
2-guessing_game/src/: main.rs
3-tic_tac_toe/src/: main.rs
4-tic_tac_toe_advanced/: Cargo.toml
4-tic_tac_toe_advanced/src/: lib.rs  main.rs  models.rs  screen.rs  utils.rs
4-tic_tac_toe_advanced/src/models/: player.rs  tabs.rs
4-tic_tac_toe_advanced/src/screen/: choose_player.rs  end_menu.rs  gameplay.rs
4-tic_tac_toe_advanced/src/utils/: get_best_move.rs  get_winner.rs
5-weather_app/: Cargo.toml
6-grep_cli_tool/: Cargo.toml
6-grep_cli_tool/src/: lib.rs  main.rs
7-snake_game/: Cargo.toml
7-snake_game/src/: draw.rs  game.rs  main.rs  score.rs  snake.rs
8-file_compressor/: Cargo.toml  project-roadmap.md
8-file_compressor/src/: commands.rs  main.rs
8-file_compressor/src/commands/: compress.rs  extract.rs
8-file_compressor/tests/: cli_snapbox.rs  compress_tests.rs
9-web_server/: 404.html  Cargo.toml
9-web_server/public/: 405.html  delete-success.html  index.html  post-success.txt  second-page.html  test-delete.html  test-methods.html  test-post.html  test-put.html  third-page.html
9-web_server/public/error/: 404.html  500.html
9-web_server/src/: lib.rs  main.rs  models.rs  utils.rs
9-web_server/src/models/: http.rs  request.rs  response.rs
9-web_server/src/utils/: parsing.rs  routing.rs
